--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-tab-navigator": "^0.3.3",
     "react-native-tab-view": "0.0.66",
     "react-native-ultimate-listview": "^3.0.2",
+    "react-native-update": "^4.0.5",
     "react-native-vector-icons": "^4.0.0",
     "react-native-wechat": "^1.9.2",
     "react-native-wx": "^3.0.3"
