--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-wx')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-update')
+    compile project(':react-native-material-kit')
     compile project(':react-native-wechat')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
