--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-native": "0.42.0",
     "react-native-banner": "^0.1.0",
     "react-native-checkbox": "^1.1.0",
+    "react-native-fetch-blob": "^0.10.6",
     "react-native-grid-component": "^1.0.4",
+    "react-native-img-cache": "^1.4.0",
     "react-native-loading-spinner-overlay": "^0.4.1",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-dropdown": "^0.4.1",
