--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-loading-spinner-overlay": "^0.4.1",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-dropdown": "^0.4.1",
+    "react-native-swipeout": "^2.2.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-tab-view": "0.0.66",
     "react-native-ultimate-listview": "^3.0.2",
