--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-checkbox": "^1.1.0",
     "react-native-fetch-blob": "^0.10.6",
     "react-native-grid-component": "^1.0.4",
+    "react-native-image-crop-picker": "^0.18.1",
     "react-native-img-cache": "^1.4.0",
     "react-native-loading-spinner-overlay": "^0.4.1",
     "react-native-material-kit": "^0.4.1",
