--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,6 +88,7 @@ android {
 
     defaultConfig {
         applicationId "com.ilingo"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 9
