--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-loading-spinner-overlay": "^0.4.1",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-dropdown": "^0.4.1",
+    "react-native-picker": "^4.3.0",
     "react-native-swipeout": "^2.2.2",
     "react-native-swiper": "^1.5.13",
     "react-native-tab-navigator": "^0.3.3",
